--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="loader-container">
-        <img src="" alt="">
+        <img src="https://play-lh.googleusercontent.com/VVdyFpTQbERtyBYkHqrTUuF7uwYbc0ML68WY7V5XnjhXcPkyXCHidYEz9L4__XSYBkIr=w240-h480-rw" alt="">
     </div>
 </body>
 </html>
