--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="loader-container">
-        <img src="https://play-lh.googleusercontent.com/VVdyFpTQbERtyBYkHqrTUuF7uwYbc0ML68WY7V5XnjhXcPkyXCHidYEz9L4__XSYBkIr=w240-h480-rw" alt="">
+        <img src="https://mir-s3-cdn-cf.behance.net/projects/404/82d3c1104917829.Y3JvcCwxMDg3Miw4NTA0LDIxMjYsMA.png" alt="">
     </div>
 </body>
 </html>
